--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <p>HI</p>
+    <p>HAY CHRIS! You're my coauthor! Do you get notifications whenever you're a coauthor? If So this is going to make you crazy.</p>
+    <p>Lookit I made another paragraph.</p>
+    <p>I'M AN HTML GENIUS!</p>
 </body>
 
 </html>
